@@ -22,7 +22,7 @@
 // SOFTWARE.
 ////////////////////////////////////////////////////////////////////////////////
 
-//#define UNSTABLE
+#define UNSTABLE
 
 namespace CardMaker
 {
@@ -31,7 +31,7 @@ namespace CardMaker
         public static string GetBuildSuffix()
         {
 #if UNSTABLE
-            return "[UNSTABLE] V.A1";
+            return "[UNSTABLE] V.A2";
 #else
             return string.Empty;
 #endif
